# open_green_compute

./: .gitignore  Cargo.toml  LICENSE  README.md  defaults.toml
.cargo/: config
src/: common.rs  config.rs  foxess.rs  fritz.rs  main.rs  power.rs  weather.rs
